<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="surveys">Surveys</string>
    <string name="offers">Offers</string>
    <string name="offer_icon">Offer icon</string>
    <string name="ads">Ads</string>
    <string name="crop">crop</string>
    <string name="your_points">Your points</string>
    <string name="your_clicks">Your clicks</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="my_account">My Account</string>
    <string name="summary">Summary of your activity</string>
    <string name="no_activity">No activity yet!</string>
    <string name="check_out_current_offers">Check out current offers to gain some coins!</string>
    <string name="requirements">Requirements:</string>
    <string name="see_all_steps">See all steps</string>
    <string name="send_link_to_email">Send link to your email</string>
    <string name="scan_qr">Scan QR Code</string>
    <string name="enter_url_on_your">Enter URL on your device</string>
    <string name="sort_offers_by">Sort offers by</string>
    <string name="recommended">Recommended</string>
    <string name="high_to_low">High to low</string>
    <string name="low_to_high">Low to high</string>
    <string name="newest">Newest</string>
    <string name="search_offer_or_keyword">Search offer or keyword</string>
    <string name="sort">Sort</string>
    <string name="start_offer">start offer</string>
    <string name="completed_tasks">Completed Tasks</string>
    <string name="search">Search</string>
    <string name="discover_offers">Discover offers</string>
    <string name="search_again">Search again, or check offers below...</string>
    <string name="featured_offers">Featured offers</string>
</resources>
