<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:animateLayoutChanges="true"
    android:background="@color/white"
    android:orientation="vertical">

    <ProgressBar
        android:visibility="visible"
        android:id="@+id/loader"
        android:layout_gravity="top|center"
        android:layout_marginTop="64dp"
        android:layout_width="32dp"
        android:layout_height="32dp"/>

    <LinearLayout
            android:orientation="vertical"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <ImageView
            android:src="@drawable/bot"
                android:layout_width="160dp"
                android:layout_height="160dp"
            />
        <ImageView
                android:layout_marginTop="12dp"
                android:src="@drawable/bot_circle"
                android:layout_width="160dp"
                android:layout_height="30dp"
                />
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
            android:text="@string/no_activity"/>
        <TextView
                android:textAlignment="center"
                android:maxWidth="220dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/check_out_current_offers"/>
    </LinearLayout>


        <LinearLayout
            android:weightSum="1"
            android:gravity="center"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:id="@+id/ptcContainer"
            android:animateLayoutChanges="true"
            android:layout_height="wrap_content">
            <LinearLayout
                style="@style/MonlinxTranscationCard"
                android:layout_height="wrap_content"
                >
                <ImageView
                        android:src="@drawable/points"
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:contentDescription="points icon" />
                <TextView
                    android:fontFamily="@font/poppins_bold"
                    android:textSize="16sp"
                    android:textColor="#333"
                    android:text="@string/your_points"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
                <TextView
                    android:fontFamily="@font/nunito_bold"
                    android:id="@+id/ptcClicks"
                    android:text="0"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
            </LinearLayout>

            <LinearLayout
                style="@style/MonlinxTranscationCard"
                android:layout_height="wrap_content"
                >
                <ImageView
                        android:src="@drawable/clicks"
                        android:scaleType="fitXY"
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:contentDescription="points icon" />
                <TextView
                    android:fontFamily="@font/poppins_bold"
                    android:textSize="16sp"
                    android:textColor="#333"
                    android:text="@string/your_clicks"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
                <TextView
                    android:fontFamily="@font/nunito_bold"
                    android:id="@+id/ptcEarnings"
                    android:text="0"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
            </LinearLayout>
    </LinearLayout>

    <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <TextView
                android:text="@string/my_account"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            <TextView
                    android:layout_gravity="start|center"
                    android:text="@string/summary"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                />
            <androidx.appcompat.widget.AppCompatSpinner
                    android:id="@+id/spinner"
                    android:layout_gravity="end|center"
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"/>

        </FrameLayout>
    </LinearLayout>
    <androidx.recyclerview.widget.RecyclerView
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        android:id="@+id/offer_result_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:listitem="@layout/transaction_item" />

</LinearLayout>
